# kasha

./: .gitignore  .pdm-python  README.md  pyproject.toml  run_gui.py
video_classifier/: core.py
