[project]
name = "Kasha"
version = "0.1.3"
description = "Default template for PDM package"
authors = [
    {name = "Samuel Markovich", email = "samuelmarcovich@gmail.com"},
]
dependencies = [
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "tzdata==2025.2",
    "webrtcvad==2.0.10",
    "setuptools>=80.9.0",
    "spacy>=3.8.7",
    "pandas>=2.3.1",
    "opencv-python>=4.12.0.88",
    "tensorflow>=2.16",
    "tensorflow-hub>=0.16.1",
]
requires-python = ">=3.11, <3.12"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}


[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

